test/Parser/Var/InheritOnExceptionVariable.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:5:25: error: unexpected 'inherit' keyword
exception TestException(inherit int i);

// CHECK: 1 error generated.
